--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,12 +1,9 @@
 .todo-list li .icon {
-	position: absolute;
-	top: 0;
-	bottom: -3px;
 	width: 30px;
 	height: 40px;
 	font-size: 34px;
 	color: #cc9a9a;
-	margin: auto 0 11px;
+	margin: auto 0;
 	transition: color 0.2s ease-out;
 	cursor: pointer;
 }
@@ -16,18 +13,46 @@
 }
 
 .todo-list li .icon-destroy {
-	right: 10px;
-}
+	position: absolute;
+	top: 0;
+	bottom: -3px;
+	right: 10px;}
 
 .todo-list li .icon-destroy:after {
 	content: '×';
 }
 
 .todo-list li .icon-edit {
+	position: absolute;
+	top: 0;
+	bottom: -3px;
 	font-size: 19px;
 	right: 45px;
 }
 
 .todo-list li .icon-edit:after {
 	content: '✎';
+}
+
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+	font-size: 18px;
+	width: 18px;
+	height: 18px;
+}
+
+.todo-list li .icon-pause {
+	margin-right: 5px;
+}
+
+.todo-list li .icon-play {
+	font-size: 15px;
+}
+
+.icon-pause:after {
+	content: '⏸';
+}
+
+.icon-play:after {
+	content: '▶';
 }
