--- a/src/components/NewTaskForm/NewTaskForm.css
+++ b/src/components/NewTaskForm/NewTaskForm.css
@@ -15,7 +15,12 @@
 	font-weight: 300;
 	color: rgba(0, 0, 0, 0.4);
 }
+.new-todo-form {
+	display: flex;
+	margin-bottom: 0;
+}
 .new-todo,
+.new-todo-form .new-todo-form__timer,
 .edit {
 	position: relative;
 	margin: 0;
@@ -33,9 +38,17 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.new-todo {
+.new-todo, .new-todo-form .new-todo-form__timer {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.003);
 	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+}
+.new-todo {
+	width: 70%;
+}
+
+.new-todo-form .new-todo-form__timer {
+	width: 15%;
+	padding-left: 16px;
 }
