--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -24,6 +24,9 @@
 .todo-list li.editing .view {
 	display: none;
 }
+.todo-list li.hidden {
+	display: none;
+}
 
 
 
@@ -34,12 +37,12 @@
 	padding: 15px 85px 15px 60px;
 }
 
-.todo-list li label .created {
+.todo-list li label .description {
 	font-size: 13px;
 	color: gray;
 }
 
-.todo-list li label .description {
+.todo-list li label .title {
 	word-break: break-all;
 	display: block;
 	line-height: 1.2;
@@ -48,12 +51,10 @@
 	color: #4d4d4d;
 }
 
-.todo-list li.completed label .description {
+.todo-list li.completed label .title {
 	color: #cdcdcd;
 	text-decoration: line-through;
 }
-
-
 
 .todo-list li .edit {
 	display: none;
